@@ -5,21 +5,25 @@ import java.io.DataOutputStream;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.ObjectOutputStream;
 import java.net.InetAddress;
-import java.net.MalformedURLException;
 import java.net.Socket;
 import java.net.URI;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Optional;
+import java.util.Properties;
 import java.util.Set;
 import java.util.jar.Attributes;
 import java.util.jar.Manifest;
@@ -27,9 +31,13 @@ import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
 
+import org.apache.maven.artifact.Artifact;
 import org.apache.maven.execution.MavenSession;
+import org.apache.maven.model.Dependency;
 import org.apache.maven.model.Plugin;
+import org.apache.maven.model.Resource;
 import org.apache.maven.plugin.AbstractMojo;
+import org.apache.maven.plugin.BuildPluginManager;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
 import org.apache.maven.plugins.annotations.Component;
@@ -38,24 +46,32 @@ import org.apache.maven.plugins.annotations.Mojo;
 import org.apache.maven.plugins.annotations.Parameter;
 import org.apache.maven.plugins.annotations.ResolutionScope;
 import org.apache.maven.project.MavenProject;
-import org.apache.maven.shared.invoker.DefaultInvocationRequest;
-import org.apache.maven.shared.invoker.InvocationRequest;
-import org.apache.maven.shared.invoker.Invoker;
-import org.apache.maven.shared.invoker.MavenInvocationException;
-import org.apache.maven.toolchain.ToolchainManager;
+import org.apache.maven.shared.utils.cli.CommandLineUtils;
 import org.codehaus.plexus.util.xml.Xpp3Dom;
 import org.eclipse.aether.RepositorySystem;
 import org.eclipse.aether.RepositorySystemSession;
+import org.eclipse.aether.artifact.DefaultArtifact;
+import org.eclipse.aether.collection.CollectRequest;
+import org.eclipse.aether.collection.DependencyCollectionException;
+import org.eclipse.aether.graph.DependencyNode;
+import org.eclipse.aether.graph.DependencyVisitor;
 import org.eclipse.aether.repository.RemoteRepository;
+import org.eclipse.aether.repository.WorkspaceReader;
+import org.eclipse.aether.resolution.ArtifactRequest;
+import org.eclipse.aether.resolution.ArtifactResolutionException;
+import org.eclipse.aether.resolution.ArtifactResult;
+import org.eclipse.aether.resolution.DependencyRequest;
+import org.eclipse.aether.resolution.DependencyResolutionException;
+import org.eclipse.aether.resolution.DependencyResult;
+import org.eclipse.aether.util.artifact.JavaScopes;
+import org.twdata.maven.mojoexecutor.MojoExecutor;
 
-import io.quarkus.bootstrap.model.AppDependency;
-import io.quarkus.bootstrap.model.AppModel;
-import io.quarkus.bootstrap.resolver.BootstrapAppModelResolver;
-import io.quarkus.bootstrap.resolver.maven.MavenArtifactResolver;
+import io.quarkus.bootstrap.model.AppArtifactKey;
+import io.quarkus.bootstrap.resolver.maven.options.BootstrapMavenOptions;
 import io.quarkus.bootstrap.resolver.maven.workspace.LocalProject;
-import io.quarkus.bootstrap.util.PropertyUtils;
-import io.quarkus.dev.DevModeContext;
-import io.quarkus.dev.DevModeMain;
+import io.quarkus.bootstrap.resolver.maven.workspace.LocalWorkspace;
+import io.quarkus.deployment.dev.DevModeContext;
+import io.quarkus.deployment.dev.DevModeMain;
 import io.quarkus.maven.components.MavenVersionEnforcer;
 import io.quarkus.maven.utilities.MojoUtils;
 import io.quarkus.utilities.JavaBinFinder;
@@ -68,6 +84,41 @@ import io.quarkus.utilities.JavaBinFinder;
  */
 @Mojo(name = "dev", defaultPhase = LifecyclePhase.PREPARE_PACKAGE, requiresDependencyResolution = ResolutionScope.COMPILE_PLUS_RUNTIME)
 public class DevMojo extends AbstractMojo {
+
+    /**
+     * running any one of these phases means the compile phase will have been run, if these have
+     * not been run we manually run compile
+     */
+    private static final Set<String> POST_COMPILE_PHASES = new HashSet<>(Arrays.asList(
+            "compile",
+            "process-classes",
+            "generate-test-sources",
+            "process-test-sources",
+            "generate-test-resources",
+            "process-test-resources",
+            "test-compile",
+            "process-test-classes",
+            "test",
+            "prepare-package",
+            "package",
+            "pre-integration-test",
+            "integration-test",
+            "post-integration-test",
+            "verify",
+            "install",
+            "deploy"));
+
+    private static final String QUARKUS_PLUGIN_GROUPID = "io.quarkus";
+    private static final String QUARKUS_PLUGIN_ARTIFACTID = "quarkus-maven-plugin";
+    private static final String QUARKUS_PREPARE_GOAL = "prepare";
+
+    private static final String ORG_APACHE_MAVEN_PLUGINS = "org.apache.maven.plugins";
+    private static final String MAVEN_COMPILER_PLUGIN = "maven-compiler-plugin";
+    private static final String MAVEN_RESOURCES_PLUGIN = "maven-resources-plugin";
+
+    private static final String ORG_JETBRAINS_KOTLIN = "org.jetbrains.kotlin";
+    private static final String KOTLIN_MAVEN_PLUGIN = "kotlin-maven-plugin";
+
     /**
      * The directory for compiled classes.
      */
@@ -141,6 +192,9 @@ public class DevMojo extends AbstractMojo {
     @Parameter(defaultValue = "${jvm.args}")
     private String jvmArgs;
 
+    @Parameter(defaultValue = "${quarkus.args}")
+    private String argsString;
+
     @Parameter(defaultValue = "${session}")
     private MavenSession session;
 
@@ -152,9 +206,6 @@ public class DevMojo extends AbstractMojo {
 
     @Component
     private RepositorySystem repoSystem;
-
-    @Component
-    private Invoker invoker;
 
     @Parameter(defaultValue = "${repositorySystemSession}", readonly = true)
     private RepositorySystemSession repoSession;
@@ -195,43 +246,45 @@ public class DevMojo extends AbstractMojo {
     @Parameter(defaultValue = "${maven.compiler.target}")
     private String target;
 
+    /**
+     * Whether or not to enforce the quarkus-maven-plugin build goal to be configured.
+     * By default, a missing build goal is considered an inconsistency (although the build goal is not <i>required</i>
+     * technically).
+     * In this case a warning will be logged and the application will not be started.
+     */
+    @Parameter(defaultValue = "${quarkus.enforceBuildGoal}")
+    private boolean enforceBuildGoal = true;
+
     @Component
-    private ToolchainManager toolchainManager;
+    private WorkspaceReader wsReader;
 
-    public ToolchainManager getToolchainManager() {
-        return toolchainManager;
-    }
+    @Component
+    private BuildPluginManager pluginManager;
 
-    public MavenSession getSession() {
-        return session;
-    }
+    private Boolean debugPortOk;
 
     @Override
     public void execute() throws MojoFailureException, MojoExecutionException {
+
         mavenVersionEnforcer.ensureMavenVersion(getLog(), session);
-        boolean found = MojoUtils.checkProjectForMavenBuildPlugin(project);
 
-        if (!found) {
-            getLog().warn("The quarkus-maven-plugin build goal was not configured for this project, " +
-                    "skipping quarkus:dev as this is assumed to be a support library. If you want to run quarkus dev" +
-                    " on this project make sure the quarkus-maven-plugin is configured with a build goal.");
-            return;
-        }
+        //we always want to compile if needed, so if it is run from the parent it will compile dependent projects
+        handleAutoCompile();
 
-        if (!sourceDir.isDirectory()) {
-            getLog().warn("The project's sources directory does not exist " + sourceDir);
-        }
+        if (enforceBuildGoal) {
+            Plugin pluginDef = MojoUtils.checkProjectForMavenBuildPlugin(project);
 
-        if (!buildDir.isDirectory() || !new File(buildDir, "classes").isDirectory()) {
-            try {
-                InvocationRequest request = new DefaultInvocationRequest();
-                request.setBatchMode(true);
-                request.setGoals(Collections.singletonList("compile"));
-
-                invoker.execute(request);
-            } catch (MavenInvocationException e) {
-                throw new MojoExecutionException(e.getMessage(), e);
+            if (pluginDef == null) {
+                getLog().warn("The quarkus-maven-plugin build goal was not configured for this project, " +
+                        "skipping quarkus:dev as this is assumed to be a support library. If you want to run quarkus dev" +
+                        " on this project make sure the quarkus-maven-plugin is configured with a build goal.");
+                return;
             }
+        }
+
+        // don't warn if running in a module of a multi-module project
+        if (!sourceDir.isDirectory() && (project.getParentFile() == null || !project.getParentFile().exists())) {
+            getLog().warn("The project's sources directory does not exist " + sourceDir);
         }
 
         try {
@@ -239,56 +292,31 @@ public class DevMojo extends AbstractMojo {
             String javaTool = JavaBinFinder.findBin();
             getLog().debug("Using javaTool: " + javaTool);
             args.add(javaTool);
-            String debugSuspend = "n";
             if (this.suspend != null) {
                 switch (this.suspend.toLowerCase(Locale.ENGLISH)) {
                     case "n":
                     case "false": {
-                        debugSuspend = "n";
+                        suspend = "n";
                         break;
                     }
                     case "y":
                     case "true": {
-                        debugSuspend = "y";
+                        suspend = "y";
                         break;
                     }
                     default: {
                         getLog().warn(
                                 "Ignoring invalid value \"" + suspend + "\" for \"suspend\" param and defaulting to \"n\"");
+                        suspend = "n";
                         break;
                     }
                 }
+            } else {
+                suspend = "n";
             }
-            if (debug == null) {
-                // debug mode not specified
-                // make sure 5005 is not used, we don't want to just fail if something else is using it
-                try (Socket socket = new Socket(InetAddress.getByAddress(new byte[] { 127, 0, 0, 1 }), 5005)) {
-                    getLog().error("Port 5005 in use, not starting in debug mode");
-                } catch (IOException e) {
-                    args.add("-Xdebug");
-                    args.add("-Xrunjdwp:transport=dt_socket,address=5005,server=y,suspend=" + debugSuspend);
-                }
-            } else if (debug.toLowerCase().equals("client")) {
-                args.add("-Xdebug");
-                args.add("-Xrunjdwp:transport=dt_socket,address=localhost:5005,server=n,suspend=" + debugSuspend);
-            } else if (debug.toLowerCase().equals("true")) {
-                args.add("-Xdebug");
-                args.add("-Xrunjdwp:transport=dt_socket,address=localhost:5005,server=y,suspend=" + debugSuspend);
-            } else if (!debug.toLowerCase().equals("false")) {
-                try {
-                    int port = Integer.parseInt(debug);
-                    if (port <= 0) {
-                        throw new MojoFailureException("The specified debug port must be greater than 0");
-                    }
-                    args.add("-Xdebug");
-                    args.add("-Xrunjdwp:transport=dt_socket,address=" + port + ",server=y,suspend=" + debugSuspend);
-                } catch (NumberFormatException e) {
-                    throw new MojoFailureException(
-                            "Invalid value for debug parameter: " + debug + " must be true|false|client|{port}");
-                }
-            }
+
             if (jvmArgs != null) {
-                args.addAll(Arrays.asList(jvmArgs.split(" ")));
+                args.addAll(Arrays.asList(CommandLineUtils.translateCommandline(jvmArgs)));
             }
 
             // the following flags reduce startup time and are acceptable only for dev purposes
@@ -297,6 +325,296 @@ public class DevMojo extends AbstractMojo {
                 args.add("-Xverify:none");
             }
 
+            DevModeRunner runner = new DevModeRunner(args);
+
+            runner.prepare(false);
+            Map<Path, Long> pomFiles = readPomFileTimestamps(runner);
+            runner.run();
+            long nextCheck = System.currentTimeMillis() + 100;
+            for (;;) {
+                //we never suspend after the first run
+                suspend = "n";
+                long sleep = Math.max(0, nextCheck - System.currentTimeMillis()) + 1;
+                Thread.sleep(sleep);
+                if (System.currentTimeMillis() > nextCheck) {
+                    nextCheck = System.currentTimeMillis() + 100;
+                    if (!runner.process.isAlive()) {
+                        if (runner.process.exitValue() != 0) {
+                            throw new MojoExecutionException("Dev mode process did not complete successfully");
+                        }
+                        return;
+                    }
+                    final Set<Path> changed = new HashSet<>();
+                    for (Map.Entry<Path, Long> e : pomFiles.entrySet()) {
+                        long t = Files.getLastModifiedTime(e.getKey()).toMillis();
+                        if (t > e.getValue()) {
+                            changed.add(e.getKey());
+                            pomFiles.put(e.getKey(), t);
+                        }
+                    }
+                    if (!changed.isEmpty()) {
+                        getLog().info("Changes detected to " + changed + ", restarting dev mode");
+                        DevModeRunner newRunner = new DevModeRunner(args);
+                        try {
+                            newRunner.prepare(true);
+                        } catch (Exception e) {
+                            getLog().info("Could not load changed pom.xml file, changes not applied", e);
+                            continue;
+                        }
+                        runner.stop();
+                        newRunner.run();
+                        runner = newRunner;
+                    }
+                }
+
+            }
+
+        } catch (Exception e) {
+            throw new MojoFailureException("Failed to run", e);
+        }
+    }
+
+    private void handleAutoCompile() throws MojoExecutionException {
+        //we check to see if there was a compile (or later) goal before this plugin
+        boolean compileNeeded = true;
+        boolean prepareNeeded = true;
+        for (String goal : session.getGoals()) {
+            if (goal.endsWith("quarkus:prepare")) {
+                prepareNeeded = false;
+            }
+
+            if (POST_COMPILE_PHASES.contains(goal)) {
+                compileNeeded = false;
+                break;
+            }
+            if (goal.endsWith("quarkus:dev")) {
+                break;
+            }
+        }
+
+        //if the user did not compile we run it for them
+        if (compileNeeded) {
+            if (prepareNeeded) {
+                triggerPrepare();
+            }
+            triggerCompile();
+        }
+    }
+
+    private void triggerPrepare() throws MojoExecutionException {
+        Plugin quarkusPlugin = project.getPlugin(QUARKUS_PLUGIN_GROUPID + ":" + QUARKUS_PLUGIN_ARTIFACTID);
+        MojoExecutor.executeMojo(
+                quarkusPlugin,
+                MojoExecutor.goal(QUARKUS_PREPARE_GOAL),
+                MojoExecutor.configuration(),
+                MojoExecutor.executionEnvironment(
+                        project,
+                        session,
+                        pluginManager));
+    }
+
+    private void triggerCompile() throws MojoExecutionException {
+        handleResources();
+
+        // compile the Kotlin sources if needed
+        final String kotlinMavenPluginKey = ORG_JETBRAINS_KOTLIN + ":" + KOTLIN_MAVEN_PLUGIN;
+        final Plugin kotlinMavenPlugin = project.getPlugin(kotlinMavenPluginKey);
+        if (kotlinMavenPlugin != null) {
+            executeCompileGoal(kotlinMavenPlugin, ORG_JETBRAINS_KOTLIN, KOTLIN_MAVEN_PLUGIN);
+        }
+
+        // Compile the Java sources if needed
+        final String compilerPluginKey = ORG_APACHE_MAVEN_PLUGINS + ":" + MAVEN_COMPILER_PLUGIN;
+        final Plugin compilerPlugin = project.getPlugin(compilerPluginKey);
+        if (compilerPlugin != null) {
+            executeCompileGoal(compilerPlugin, ORG_APACHE_MAVEN_PLUGINS, MAVEN_COMPILER_PLUGIN);
+        }
+    }
+
+    /**
+     * Execute the resources:resources goal if resources have been configured on the project
+     */
+    private void handleResources() throws MojoExecutionException {
+        List<Resource> resources = project.getResources();
+        if (resources.isEmpty()) {
+            return;
+        }
+        Plugin resourcesPlugin = project.getPlugin(ORG_APACHE_MAVEN_PLUGINS + ":" + MAVEN_RESOURCES_PLUGIN);
+        if (resourcesPlugin == null) {
+            return;
+        }
+        MojoExecutor.executeMojo(
+                MojoExecutor.plugin(
+                        MojoExecutor.groupId(ORG_APACHE_MAVEN_PLUGINS),
+                        MojoExecutor.artifactId(MAVEN_RESOURCES_PLUGIN),
+                        MojoExecutor.version(resourcesPlugin.getVersion()),
+                        resourcesPlugin.getDependencies()),
+                MojoExecutor.goal("resources"),
+                getPluginConfig(resourcesPlugin),
+                MojoExecutor.executionEnvironment(
+                        project,
+                        session,
+                        pluginManager));
+    }
+
+    private void executeCompileGoal(Plugin plugin, String groupId, String artifactId) throws MojoExecutionException {
+        MojoExecutor.executeMojo(
+                MojoExecutor.plugin(
+                        MojoExecutor.groupId(groupId),
+                        MojoExecutor.artifactId(artifactId),
+                        MojoExecutor.version(plugin.getVersion()),
+                        plugin.getDependencies()),
+                MojoExecutor.goal("compile"),
+                getPluginConfig(plugin),
+                MojoExecutor.executionEnvironment(
+                        project,
+                        session,
+                        pluginManager));
+    }
+
+    private Xpp3Dom getPluginConfig(Plugin plugin) {
+        Xpp3Dom configuration = MojoExecutor.configuration();
+        Xpp3Dom pluginConfiguration = (Xpp3Dom) plugin.getConfiguration();
+        if (pluginConfiguration != null) {
+            //Filter out `test*` configurations
+            for (Xpp3Dom child : pluginConfiguration.getChildren()) {
+                if (!child.getName().startsWith("test")) {
+                    configuration.addChild(child);
+                }
+            }
+        }
+        return configuration;
+    }
+
+    private Map<Path, Long> readPomFileTimestamps(DevModeRunner runner) throws IOException {
+        Map<Path, Long> ret = new HashMap<>();
+        for (Path i : runner.getPomFiles()) {
+            ret.put(i, Files.getLastModifiedTime(i).toMillis());
+        }
+        return ret;
+    }
+
+    private String getSourceEncoding() {
+        Object sourceEncodingProperty = project.getProperties().get("project.build.sourceEncoding");
+        if (sourceEncodingProperty != null) {
+            return (String) sourceEncodingProperty;
+        }
+        return null;
+    }
+
+    private void addProject(DevModeContext devModeContext, LocalProject localProject, boolean root) {
+
+        String projectDirectory = null;
+        Set<String> sourcePaths = null;
+        String classesPath = null;
+        String resourcePath = null;
+
+        final MavenProject mavenProject = session.getProjectMap().get(
+                String.format("%s:%s:%s", localProject.getGroupId(), localProject.getArtifactId(), localProject.getVersion()));
+        if (mavenProject == null) {
+            projectDirectory = localProject.getDir().toAbsolutePath().toString();
+            Path sourcePath = localProject.getSourcesSourcesDir().toAbsolutePath();
+            if (Files.isDirectory(sourcePath)) {
+                sourcePaths = Collections.singleton(
+                        sourcePath.toString());
+            } else {
+                sourcePaths = Collections.emptySet();
+            }
+        } else {
+            projectDirectory = mavenProject.getBasedir().getPath();
+            sourcePaths = mavenProject.getCompileSourceRoots().stream()
+                    .map(Paths::get)
+                    .filter(Files::isDirectory)
+                    .map(src -> src.toAbsolutePath().toString())
+                    .collect(Collectors.toSet());
+        }
+        Path sourceParent = localProject.getSourcesDir().toAbsolutePath();
+
+        Path classesDir = localProject.getClassesDir();
+        if (Files.isDirectory(classesDir)) {
+            classesPath = classesDir.toAbsolutePath().toString();
+        }
+        Path resourcesSourcesDir = localProject.getResourcesSourcesDir();
+        if (Files.isDirectory(resourcesSourcesDir)) {
+            resourcePath = resourcesSourcesDir.toAbsolutePath().toString();
+        }
+
+        Path targetDir = Paths.get(project.getBuild().getDirectory());
+
+        DevModeContext.ModuleInfo moduleInfo = new DevModeContext.ModuleInfo(localProject.getKey(),
+                localProject.getArtifactId(),
+                projectDirectory,
+                sourcePaths,
+                classesPath,
+                resourcePath,
+                sourceParent.toAbsolutePath().toString(),
+                targetDir.resolve("generated-sources").toAbsolutePath().toString(),
+                targetDir.toAbsolutePath().toString());
+        if (root) {
+            devModeContext.setApplicationRoot(moduleInfo);
+        } else {
+            devModeContext.getAdditionalModules().add(moduleInfo);
+        }
+    }
+
+    private void addToClassPaths(StringBuilder classPathManifest, File file) {
+        final URI uri = file.toPath().toAbsolutePath().toUri();
+        classPathManifest.append(uri).append(" ");
+    }
+
+    class DevModeRunner {
+
+        private static final String KOTLIN_MAVEN_PLUGIN_GA = "org.jetbrains.kotlin:kotlin-maven-plugin";
+        private final List<String> args;
+        private Process process;
+        private Set<Path> pomFiles = new HashSet<>();
+
+        DevModeRunner(List<String> args) {
+            this.args = new ArrayList<>(args);
+        }
+
+        /**
+         * Attempts to prepare the dev mode runner.
+         */
+        void prepare(final boolean triggerCompile) throws Exception {
+            if (triggerCompile) {
+                triggerCompile();
+            }
+            if (debug == null) {
+                // debug mode not specified
+                // make sure 5005 is not used, we don't want to just fail if something else is using it
+                // we don't check this on restarts, as the previous process is still running
+                if (debugPortOk == null) {
+                    try (Socket socket = new Socket(InetAddress.getByAddress(new byte[] { 127, 0, 0, 1 }), 5005)) {
+                        getLog().error("Port 5005 in use, not starting in debug mode");
+                        debugPortOk = false;
+                    } catch (IOException e) {
+                        debugPortOk = true;
+                    }
+                }
+                if (debugPortOk) {
+                    args.add("-Xdebug");
+                    args.add("-Xrunjdwp:transport=dt_socket,address=0.0.0.0:5005,server=y,suspend=" + suspend);
+                }
+            } else if (debug.toLowerCase().equals("client")) {
+                args.add("-Xdebug");
+                args.add("-Xrunjdwp:transport=dt_socket,address=localhost:5005,server=n,suspend=" + suspend);
+            } else if (debug.toLowerCase().equals("true")) {
+                args.add("-Xdebug");
+                args.add("-Xrunjdwp:transport=dt_socket,address=0.0.0.0:5005,server=y,suspend=" + suspend);
+            } else if (!debug.toLowerCase().equals("false")) {
+                try {
+                    int port = Integer.parseInt(debug);
+                    if (port <= 0) {
+                        throw new MojoFailureException("The specified debug port must be greater than 0");
+                    }
+                    args.add("-Xdebug");
+                    args.add("-Xrunjdwp:transport=dt_socket,address=0.0.0.0:" + port + ",server=y,suspend=" + suspend);
+                } catch (NumberFormatException e) {
+                    throw new MojoFailureException(
+                            "Invalid value for debug parameter: " + debug + " must be true|false|client|{port}");
+                }
+            }
             //build a class-path string for the base platform
             //this stuff does not change
             // Do not include URIs in the manifest, because some JVMs do not like that
@@ -305,116 +623,85 @@ public class DevMojo extends AbstractMojo {
             for (Map.Entry<Object, Object> e : System.getProperties().entrySet()) {
                 devModeContext.getSystemProperties().put(e.getKey().toString(), (String) e.getValue());
             }
+            devModeContext.setProjectDir(project.getFile().getParentFile());
             devModeContext.getBuildSystemProperties().putAll((Map) project.getProperties());
+
+            //  this is a minor hack to allow ApplicationConfig to be populated with defaults
+            devModeContext.getBuildSystemProperties().putIfAbsent("quarkus.application.name", project.getArtifactId());
+            devModeContext.getBuildSystemProperties().putIfAbsent("quarkus.application.version", project.getVersion());
+
             devModeContext.setSourceEncoding(getSourceEncoding());
-            devModeContext.setSourceJavaVersion(source);
-            devModeContext.setTargetJvmVersion(target);
 
             // Set compilation flags.  Try the explicitly given configuration first.  Otherwise,
             // refer to the configuration of the Maven Compiler Plugin.
+            final Optional<Xpp3Dom> compilerPluginConfiguration = findCompilerPluginConfiguration();
             if (compilerArgs != null) {
                 devModeContext.setCompilerOptions(compilerArgs);
-            } else {
-                for (Plugin plugin : project.getBuildPlugins()) {
-                    if (!plugin.getKey().equals("org.apache.maven.plugins:maven-compiler-plugin")) {
-                        continue;
-                    }
-                    Xpp3Dom compilerPluginConfiguration = (Xpp3Dom) plugin.getConfiguration();
-                    if (compilerPluginConfiguration == null) {
-                        continue;
-                    }
-                    Xpp3Dom compilerPluginArgsConfiguration = compilerPluginConfiguration.getChild("compilerArgs");
-                    if (compilerPluginArgsConfiguration == null) {
-                        continue;
-                    }
+            } else if (compilerPluginConfiguration.isPresent()) {
+                final Xpp3Dom compilerPluginArgsConfiguration = compilerPluginConfiguration.get().getChild("compilerArgs");
+                if (compilerPluginArgsConfiguration != null) {
                     List<String> compilerPluginArgs = new ArrayList<>();
                     for (Xpp3Dom argConfiguration : compilerPluginArgsConfiguration.getChildren()) {
                         compilerPluginArgs.add(argConfiguration.getValue());
                     }
-                    devModeContext.setCompilerOptions(compilerPluginArgs);
-                    break;
-                }
-            }
-
-            final AppModel appModel;
-            try {
-                final LocalProject localProject;
-                if (noDeps) {
-                    localProject = LocalProject.load(outputDirectory.toPath());
-                    addProject(devModeContext, localProject);
-                } else {
-                    localProject = LocalProject.loadWorkspace(outputDirectory.toPath());
-                    for (LocalProject project : localProject.getSelfWithLocalDeps()) {
-                        if (project.getClassesDir() != null) {
-                            //if this project also contains Quarkus extensions we do no want to include these in the discovery
-                            //a bit of an edge case, but if you try and include a sample project with your extension you will
-                            //run into problems without this
-                            if (Files.exists(project.getClassesDir().resolve("META-INF/quarkus-extension.properties")) ||
-                                    Files.exists(project.getClassesDir().resolve("META-INF/quarkus-build-steps.list"))) {
-                                continue;
-                            }
-                        }
-                        addProject(devModeContext, project);
+                    // compilerArgs can also take a value without using arg
+                    if (compilerPluginArgsConfiguration.getValue() != null
+                            && !compilerPluginArgsConfiguration.getValue().isEmpty()) {
+                        compilerPluginArgs.add(compilerPluginArgsConfiguration.getValue().trim());
                     }
+                    devModeContext.setCompilerOptions(compilerPluginArgs);
                 }
-
-                /*
-                 * TODO: support multiple resources dirs for config hot deployment
-                 * String resources = null;
-                 * for (Resource i : project.getBuild().getResources()) {
-                 * resources = i.getDirectory();
-                 * break;
-                 * }
-                 */
-
-                appModel = new BootstrapAppModelResolver(MavenArtifactResolver.builder()
-                        .setRepositorySystem(repoSystem)
-                        .setRepositorySystemSession(repoSession)
-                        .setRemoteRepositories(repos)
-                        .setWorkspace(localProject.getWorkspace())
-                        .build())
-                                .setDevMode(true)
-                                .resolveModel(localProject.getAppArtifact());
-            } catch (Exception e) {
-                throw new MojoExecutionException("Failed to resolve Quarkus application model", e);
             }
-            for (AppDependency appDep : appModel.getAllDependencies()) {
-                addToClassPaths(classPathManifest, devModeContext, appDep.getArtifact().getPath().toFile());
+            if (source != null) {
+                devModeContext.setSourceJavaVersion(source);
+            } else if (compilerPluginConfiguration.isPresent()) {
+                final Xpp3Dom javacSourceVersion = compilerPluginConfiguration.get().getChild("source");
+                if (javacSourceVersion != null && javacSourceVersion.getValue() != null
+                        && !javacSourceVersion.getValue().trim().isEmpty()) {
+                    devModeContext.setSourceJavaVersion(javacSourceVersion.getValue().trim());
+                }
             }
+            if (target != null) {
+                devModeContext.setTargetJvmVersion(target);
+            } else if (compilerPluginConfiguration.isPresent()) {
+                final Xpp3Dom javacTargetVersion = compilerPluginConfiguration.get().getChild("target");
+                if (javacTargetVersion != null && javacTargetVersion.getValue() != null
+                        && !javacTargetVersion.getValue().trim().isEmpty()) {
+                    devModeContext.setTargetJvmVersion(javacTargetVersion.getValue().trim());
+                }
+            }
+
+            setKotlinSpecificFlags(devModeContext);
+            if (noDeps) {
+                final LocalProject localProject = LocalProject.load(project.getModel().getPomFile().toPath());
+                addProject(devModeContext, localProject, true);
+                pomFiles.add(localProject.getRawModel().getPomFile().toPath());
+                devModeContext.getLocalArtifacts()
+                        .add(new AppArtifactKey(localProject.getGroupId(), localProject.getArtifactId(), null, "jar"));
+            } else {
+                final LocalProject localProject = LocalProject.loadWorkspace(project.getModel().getPomFile().toPath());
+                for (LocalProject project : filterExtensionDependencies(localProject)) {
+                    addProject(devModeContext, project, project == localProject);
+                    pomFiles.add(project.getRawModel().getPomFile().toPath());
+                    devModeContext.getLocalArtifacts()
+                            .add(new AppArtifactKey(project.getGroupId(), project.getArtifactId(), null, "jar"));
+                }
+            }
+
+            addQuarkusDevModeDeps(classPathManifest);
 
             args.add("-Djava.util.logging.manager=org.jboss.logmanager.LogManager");
-            //wiring devmode is used for CDI beans that are not part of the user application (i.e. beans in 3rd party jars)
-            //we need this because these beans cannot be loaded by the runtime class loader, they must be loaded by the platform
-            //class loader
-            File wiringClassesDirectory = new File(buildDir, "wiring-devmode");
-            wiringClassesDirectory.mkdirs();
 
-            addToClassPaths(classPathManifest, devModeContext, wiringClassesDirectory);
-
-            //we also want to add the maven plugin jar to the class path
-            //this allows us to just directly use classes, without messing around copying them
-            //to the runner jar
-            URL classFile = DevModeMain.class.getClassLoader()
-                    .getResource(DevModeMain.class.getName().replace('.', '/') + ".class");
-            File path;
-            if (classFile == null) {
-                throw new MojoFailureException("No DevModeMain class found");
-            }
-            URI classUri = classFile.toURI();
-            if (classUri.getScheme().equals("jar")) {
-                String jarPath = classUri.getRawSchemeSpecificPart();
-                final int marker = jarPath.indexOf('!');
-                if (marker != -1) {
-                    jarPath = jarPath.substring(0, marker);
+            //in most cases these are not used, however they need to be present for some
+            //parent-first cases such as logging
+            for (Artifact appDep : project.getArtifacts()) {
+                // only add the artifact if it's present in the dev mode context
+                // we need this to avoid having jars on the classpath multiple times
+                if (!devModeContext.getLocalArtifacts().contains(new AppArtifactKey(appDep.getGroupId(), appDep.getArtifactId(),
+                        appDep.getClassifier(), appDep.getArtifactHandler().getExtension()))) {
+                    addToClassPaths(classPathManifest, appDep.getFile());
                 }
-                URI jarUri = new URI(jarPath);
-                path = Paths.get(jarUri).toFile();
-            } else if (classUri.getScheme().equals("file")) {
-                path = Paths.get(classUri).toFile();
-            } else {
-                throw new MojoFailureException("Unsupported DevModeMain artifact URL:" + classFile);
             }
-            addToClassPaths(classPathManifest, devModeContext, path);
 
             //now we need to build a temporary jar to actually run
 
@@ -426,12 +713,14 @@ public class DevMojo extends AbstractMojo {
             }
             getLog().debug("Executable jar: " + tempFile.getAbsolutePath());
 
-            devModeContext.getClassesRoots().add(outputDirectory.getAbsoluteFile());
-            devModeContext.setFrameworkClassesDir(wiringClassesDirectory.getAbsoluteFile());
+            devModeContext.setBaseName(project.getBuild().getFinalName());
             devModeContext.setCacheDir(new File(buildDir, "transformer-cache").getAbsoluteFile());
 
             // this is the jar file we will use to launch the dev mode main class
             devModeContext.setDevModeRunnerJarFile(tempFile);
+
+            modifyDevModeContext(devModeContext);
+
             try (ZipOutputStream out = new ZipOutputStream(new FileOutputStream(tempFile))) {
                 out.putNextEntry(new ZipEntry("META-INF/"));
                 Manifest manifest = new Manifest();
@@ -450,110 +739,261 @@ public class DevMojo extends AbstractMojo {
             }
 
             outputDirectory.mkdirs();
+            // if the --enable-preview flag was set, then we need to enable it when launching dev mode as well
+            if (devModeContext.isEnablePreview()) {
+                args.add(DevModeContext.ENABLE_PREVIEW_FLAG);
+            }
+
+            propagateUserProperties();
 
             args.add("-jar");
             args.add(tempFile.getAbsolutePath());
-            // Display the launch command line in debug mode
-            getLog().debug("Launching JVM with command line: " + args.toString());
-            ProcessBuilder pb = new ProcessBuilder(args.toArray(new String[0]));
-            pb.redirectError(ProcessBuilder.Redirect.INHERIT);
-            pb.redirectOutput(ProcessBuilder.Redirect.INHERIT);
-            pb.redirectInput(ProcessBuilder.Redirect.INHERIT);
-            pb.directory(workingDir);
-            Process p = pb.start();
+            if (argsString != null) {
+                args.addAll(Arrays.asList(CommandLineUtils.translateCommandline(argsString)));
+            }
+        }
 
+        private void propagateUserProperties() {
+            final String mavenCmdLine = BootstrapMavenOptions.getMavenCmdLine();
+            if (mavenCmdLine == null || mavenCmdLine.isEmpty()) {
+                return;
+            }
+            int i = mavenCmdLine.indexOf("-D");
+            if (i < 0) {
+                return;
+            }
+            final StringBuilder buf = new StringBuilder();
+            buf.append("-D");
+            i += 2;
+            while (i < mavenCmdLine.length()) {
+                final char ch = mavenCmdLine.charAt(i++);
+                if (!Character.isWhitespace(ch)) {
+                    buf.append(ch);
+                } else if (buf.length() > 2) {
+                    args.add(buf.toString());
+                    buf.setLength(2);
+                    i = mavenCmdLine.indexOf("-D", i);
+                    if (i < 0) {
+                        break;
+                    }
+                    i += 2;
+                }
+            }
+            if (buf.length() > 2) {
+                args.add(buf.toString());
+            }
+        }
+
+        private void addQuarkusDevModeDeps(StringBuilder classPathManifest)
+                throws MojoExecutionException, DependencyResolutionException {
+            final String pomPropsPath = "META-INF/maven/io.quarkus/quarkus-core-deployment/pom.properties";
+            final InputStream devModePomPropsIs = DevModeMain.class.getClassLoader().getResourceAsStream(pomPropsPath);
+            if (devModePomPropsIs == null) {
+                throw new MojoExecutionException("Failed to locate " + pomPropsPath + " on the classpath");
+            }
+            final Properties devModeProps = new Properties();
+            try (InputStream is = devModePomPropsIs) {
+                devModeProps.load(is);
+            } catch (IOException e) {
+                throw new MojoExecutionException("Failed to load " + pomPropsPath + " from the classpath", e);
+            }
+            final String devModeGroupId = devModeProps.getProperty("groupId");
+            if (devModeGroupId == null) {
+                throw new MojoExecutionException("Classpath resource " + pomPropsPath + " is missing groupId");
+            }
+            final String devModeArtifactId = devModeProps.getProperty("artifactId");
+            if (devModeArtifactId == null) {
+                throw new MojoExecutionException("Classpath resource " + pomPropsPath + " is missing artifactId");
+            }
+            final String devModeVersion = devModeProps.getProperty("version");
+            if (devModeVersion == null) {
+                throw new MojoExecutionException("Classpath resource " + pomPropsPath + " is missing version");
+            }
+
+            final DefaultArtifact devModeJar = new DefaultArtifact(devModeGroupId, devModeArtifactId, "jar", devModeVersion);
+            final DependencyResult cpRes = repoSystem.resolveDependencies(repoSession,
+                    new DependencyRequest()
+                            .setCollectRequest(
+                                    new CollectRequest()
+                                            .setRoot(new org.eclipse.aether.graph.Dependency(devModeJar, JavaScopes.RUNTIME))
+                                            .setRepositories(repos)));
+
+            for (ArtifactResult appDep : cpRes.getArtifactResults()) {
+                //we only use the launcher for launching from the IDE, we need to exclude it
+                if (!(appDep.getArtifact().getGroupId().equals("io.quarkus")
+                        && appDep.getArtifact().getArtifactId().equals("quarkus-ide-launcher"))) {
+                    addToClassPaths(classPathManifest, appDep.getArtifact().getFile());
+                }
+            }
+        }
+
+        private void setKotlinSpecificFlags(DevModeContext devModeContext) {
+            Plugin kotlinMavenPlugin = null;
+            for (Plugin plugin : project.getBuildPlugins()) {
+                if (plugin.getKey().equals(KOTLIN_MAVEN_PLUGIN_GA)) {
+                    kotlinMavenPlugin = plugin;
+                    break;
+                }
+            }
+
+            if (kotlinMavenPlugin == null) {
+                return;
+            }
+
+            getLog().debug("Kotlin Maven plugin detected");
+
+            List<String> compilerPluginArtifacts = new ArrayList<>();
+            List<Dependency> dependencies = kotlinMavenPlugin.getDependencies();
+            for (Dependency dependency : dependencies) {
+                try {
+                    ArtifactResult resolvedArtifact = repoSystem.resolveArtifact(repoSession,
+                            new ArtifactRequest()
+                                    .setArtifact(new DefaultArtifact(dependency.getGroupId(), dependency.getArtifactId(),
+                                            dependency.getClassifier(), dependency.getType(), dependency.getVersion()))
+                                    .setRepositories(repos));
+
+                    compilerPluginArtifacts.add(resolvedArtifact.getArtifact().getFile().toPath().toAbsolutePath().toString());
+                } catch (ArtifactResolutionException e) {
+                    getLog().warn("Unable to properly setup dev-mode for Kotlin", e);
+                    return;
+                }
+            }
+            devModeContext.setCompilerPluginArtifacts(compilerPluginArtifacts);
+
+            List<String> options = new ArrayList<>();
+            Xpp3Dom compilerPluginConfiguration = (Xpp3Dom) kotlinMavenPlugin.getConfiguration();
+            if (compilerPluginConfiguration != null) {
+                Xpp3Dom compilerPluginArgsConfiguration = compilerPluginConfiguration.getChild("pluginOptions");
+                if (compilerPluginArgsConfiguration != null) {
+                    for (Xpp3Dom argConfiguration : compilerPluginArgsConfiguration.getChildren()) {
+                        options.add(argConfiguration.getValue());
+                    }
+                }
+            }
+            devModeContext.setCompilerPluginsOptions(options);
+        }
+
+        public Set<Path> getPomFiles() {
+            return pomFiles;
+        }
+
+        public void run() throws Exception {
+            // Display the launch command line in dev mode
+            if (getLog().isDebugEnabled()) {
+                getLog().debug("Launching JVM with command line: " + String.join(" ", args));
+            }
+            process = new ProcessBuilder(args)
+                    .inheritIO()
+                    .directory(workingDir)
+                    .start();
             //https://github.com/quarkusio/quarkus/issues/232
             Runtime.getRuntime().addShutdownHook(new Thread(new Runnable() {
                 @Override
                 public void run() {
-                    p.destroy();
+                    process.destroy();
                 }
             }, "Development Mode Shutdown Hook"));
-            try {
-                int ret = p.waitFor();
-                if (ret != 0) {
-                    throw new MojoFailureException("JVM exited with error code: " + ret);
+        }
+
+        public void stop() throws InterruptedException {
+            process.destroy();
+            process.waitFor();
+        }
+
+    }
+
+    protected void modifyDevModeContext(DevModeContext devModeContext) {
+
+    }
+
+    private List<LocalProject> filterExtensionDependencies(LocalProject localProject) {
+        final LocalWorkspace workspace = localProject.getWorkspace();
+        if (workspace == null) {
+            return Collections.singletonList(localProject);
+        }
+
+        List<LocalProject> ret = new ArrayList<>();
+        Set<AppArtifactKey> extensionsAndDeps = new HashSet<>();
+
+        ret.add(localProject);
+        for (Artifact a : project.getArtifacts()) {
+            final AppArtifactKey depKey = new AppArtifactKey(a.getGroupId(), a.getArtifactId());
+            final LocalProject project = workspace.getProject(depKey);
+            if (project == null) {
+                continue;
+            }
+            if (!project.getVersion().equals(a.getVersion())) {
+                getLog().warn(depKey + " is excluded from live coding since the application depends on version "
+                        + a.getVersion() + " while the version present in the workspace is " + project.getVersion());
+                continue;
+            }
+            if (project.getClassesDir() != null &&
+            //if this project also contains Quarkus extensions we do no want to include these in the discovery
+            //a bit of an edge case, but if you try and include a sample project with your extension you will
+            //run into problems without this
+                    (Files.exists(project.getClassesDir().resolve("META-INF/quarkus-extension.properties")) ||
+                            Files.exists(project.getClassesDir().resolve("META-INF/quarkus-build-steps.list")))) {
+                // TODO add the deployment deps
+                extensionDepWarning(depKey);
+                try {
+                    final DependencyNode depRoot = repoSystem.collectDependencies(repoSession, new CollectRequest()
+                            .setRoot(new org.eclipse.aether.graph.Dependency(
+                                    new DefaultArtifact(a.getGroupId(), a.getArtifactId(),
+                                            a.getClassifier(), a.getArtifactHandler().getExtension(), a.getVersion()),
+                                    JavaScopes.RUNTIME))
+                            .setRepositories(repos)).getRoot();
+                    depRoot.accept(new DependencyVisitor() {
+                        @Override
+                        public boolean visitEnter(DependencyNode node) {
+                            final org.eclipse.aether.artifact.Artifact artifact = node.getArtifact();
+                            if ("jar".equals(artifact.getExtension())) {
+                                extensionsAndDeps.add(new AppArtifactKey(artifact.getGroupId(), artifact.getArtifactId()));
+                            }
+                            return true;
+                        }
+
+                        @Override
+                        public boolean visitLeave(DependencyNode node) {
+                            return true;
+                        }
+                    });
+                } catch (DependencyCollectionException e) {
+                    throw new RuntimeException("Failed to collect dependencies for " + a, e);
                 }
-            } catch (Exception e) {
-                p.destroy();
-                throw e;
-            }
-
-        } catch (Exception e) {
-            throw new MojoFailureException("Failed to run", e);
-        }
-    }
-
-    private String getSourceEncoding() {
-        Object sourceEncodingProperty = project.getProperties().get("project.build.sourceEncoding");
-        if (sourceEncodingProperty != null) {
-            return (String) sourceEncodingProperty;
-        }
-        return null;
-    }
-
-    private void addProject(DevModeContext devModeContext, LocalProject localProject) {
-
-        String projectDirectory = null;
-        Set<String> sourcePaths = null;
-        String classesPath = null;
-        String resourcePath = null;
-
-        final MavenProject mavenProject = session.getProjectMap().get(
-                String.format("%s:%s:%s", localProject.getGroupId(), localProject.getArtifactId(), localProject.getVersion()));
-
-        if (mavenProject == null) {
-            projectDirectory = localProject.getDir().toAbsolutePath().toString();
-            Path sourcePath = localProject.getSourcesSourcesDir().toAbsolutePath();
-            if (Files.isDirectory(sourcePath)) {
-                sourcePaths = Collections.singleton(
-                        sourcePath.toString());
             } else {
-                sourcePaths = Collections.emptySet();
+                ret.add(project);
             }
-        } else {
-            projectDirectory = mavenProject.getBasedir().getPath();
-            sourcePaths = mavenProject.getCompileSourceRoots().stream()
-                    .map(Paths::get)
-                    .filter(Files::isDirectory)
-                    .map(src -> src.toAbsolutePath().toString())
-                    .collect(Collectors.toSet());
         }
 
-        Path classesDir = localProject.getClassesDir();
-        if (Files.isDirectory(classesDir)) {
-            classesPath = classesDir.toAbsolutePath().toString();
+        if (extensionsAndDeps.isEmpty()) {
+            return ret;
         }
-        Path resourcesSourcesDir = localProject.getResourcesSourcesDir();
-        if (Files.isDirectory(resourcesSourcesDir)) {
-            resourcePath = resourcesSourcesDir.toAbsolutePath().toString();
+
+        Iterator<LocalProject> iterator = ret.iterator();
+        while (iterator.hasNext()) {
+            final LocalProject localDep = iterator.next();
+            if (extensionsAndDeps.contains(localDep.getKey())) {
+                extensionDepWarning(localDep.getKey());
+                iterator.remove();
+            }
         }
-        DevModeContext.ModuleInfo moduleInfo = new DevModeContext.ModuleInfo(
-                localProject.getArtifactId(),
-                projectDirectory,
-                sourcePaths,
-                classesPath,
-                resourcePath);
-        devModeContext.getModules().add(moduleInfo);
+        return ret;
     }
 
-    private void addToClassPaths(StringBuilder classPathManifest, DevModeContext classPath, File file) {
-        URI uri = file.toPath().toAbsolutePath().toUri();
-        try {
-            classPath.getClassPath().add(uri.toURL());
-        } catch (MalformedURLException e) {
-            throw new RuntimeException(e);
-        }
-        String path = uri.getRawPath();
-        if (PropertyUtils.isWindows()) {
-            if (path.length() > 2 && Character.isLetter(path.charAt(0)) && path.charAt(1) == ':') {
-                path = "/" + path;
+    private void extensionDepWarning(AppArtifactKey key) {
+        getLog().warn("Local Quarkus extension dependency " + key + " will not be hot-reloadable");
+    }
+
+    private Optional<Xpp3Dom> findCompilerPluginConfiguration() {
+        for (final Plugin plugin : project.getBuildPlugins()) {
+            if (!plugin.getKey().equals("org.apache.maven.plugins:maven-compiler-plugin")) {
+                continue;
+            }
+            final Xpp3Dom compilerPluginConfiguration = (Xpp3Dom) plugin.getConfiguration();
+            if (compilerPluginConfiguration != null) {
+                return Optional.of(compilerPluginConfiguration);
             }
         }
-        classPathManifest.append(path);
-        if (file.isDirectory() && path.charAt(path.length() - 1) != '/') {
-            classPathManifest.append("/");
-        }
-        classPathManifest.append(" ");
+        return Optional.empty();
     }
 }
